--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" href="resources/css/reset.css" rel="Stylesheet" />
     <link type="text/css" href="resources/css/default.css" rel="Stylesheet" />
     <!--<link href='https://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>-->
+    <script id="gs-sdk" src='//www.buildquickbots.com/botwidget/v2/demo/static/js/sdk.js?v=3' key="2f6a57f7-889b-43af-bf7c-c5ff2d8455d1" ></script>
 
     <script type="text/javascript">
         if (location.href.toString().indexOf('file://localhost/') == 0) {
